version/0.68/_sources/examples/gallery_examples/01-geometry/03-volumes.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-geometry/03-volumes.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-geometry_03-volumes.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-geometry_03-volumes.py:


.. _ref_basic-geometry-volumes:

Volumes
-------

This example shows how to create basic geometry
using volume commands.

.. GENERATED FROM PYTHON SOURCE LINES 33-45

.. code-block:: Python


    import numpy as np

    from ansys.mapdl.core import launch_mapdl

    # start MAPDL and enter the pre-processing routine
    mapdl = launch_mapdl()
    mapdl.clear()
    mapdl.prep7()
    print(mapdl)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Product:             Ansys Mechanical Enterprise Academic Student
    MAPDL Version:       24.2
    ansys.mapdl Version: 0.68.5





.. GENERATED FROM PYTHON SOURCE LINES 46-49

APDL Command: V
~~~~~~~~~~~~~~~
Define a volume through keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 49-64

.. code-block:: Python


    # Create a simple cube volume.

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    k4 = mapdl.k("", 0, 0, 1)
    k5 = mapdl.k("", 1, 0, 1)
    k6 = mapdl.k("", 1, 1, 1)
    k7 = mapdl.k("", 0, 1, 1)
    v0 = mapdl.v(k0, k1, k2, k3, k4, k5, k6, k7)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_001.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_002.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_002.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 65-66

Create a triangular prism

.. GENERATED FROM PYTHON SOURCE LINES 66-81

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    k4 = mapdl.k("", 0, 0, 1)
    k5 = mapdl.k("", 1, 0, 1)
    k6 = mapdl.k("", 1, 1, 1)
    k7 = mapdl.k("", 0, 1, 1)
    v1 = mapdl.v(k0, k1, k2, k2, k4, k5, k6, k6)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_003.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_003.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_004.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_004.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 82-83

Create a triangular prism

.. GENERATED FROM PYTHON SOURCE LINES 83-94

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 0, 1)
    v0 = mapdl.v(k0, k1, k2, k2, k3, k3, k3, k3)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_005.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_005.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_006.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_006.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 95-100

APDL Command: VA
~~~~~~~~~~~~~~~~
Generate a volume bounded by existing areas.

Create a simple tetrahedral bounded by 4 areas

.. GENERATED FROM PYTHON SOURCE LINES 100-119

.. code-block:: Python


    mapdl.clear()
    mapdl.prep7()
    k0 = mapdl.k("", -1, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 1, 0.5, 1)

    # create faces
    a0 = mapdl.a(k0, k1, k2)
    a1 = mapdl.a(k0, k1, k3)
    a2 = mapdl.a(k1, k2, k3)
    a3 = mapdl.a(k0, k2, k3)

    # generate and plot the volume
    vnum = mapdl.va(a0, a1, a2, a3)
    mapdl.aplot(show_lines=True, show_bounds=True)





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_007.png
   :alt: 03 volumes
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 120-125

APDL Command: VDRAG
~~~~~~~~~~~~~~~~~~~
Generate volumes by dragging an area pattern along a path.

Create a square with a hole in it and drag it along an arc.

.. GENERATED FROM PYTHON SOURCE LINES 125-141

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # create a square with a hole in it.
    anum0 = mapdl.blc4(0, 0, 1, 1)
    anum1 = mapdl.blc4(0.25, 0.25, 0.5, 0.5)
    aout = mapdl.asba(anum0, anum1)

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 1)
    k2 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.larc(k0, k1, k2, 2)
    mapdl.vdrag(aout, nlp1=l0)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_008.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_008.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_009.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_009.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 142-147

APDL Command: VEXT
~~~~~~~~~~~~~~~~~~
Generate additional volumes by extruding areas.

Create a basic cylinder by extruding a circle.

.. GENERATED FROM PYTHON SOURCE LINES 147-162

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # first, create an area from a circle
    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", 0, 0, 0.5)
    carc0 = mapdl.circle(k0, 1, k1)
    a0 = mapdl.al(*carc0)

    # next, extrude it and plot it
    mapdl.vext(a0, dz=4)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_010.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_010.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_011.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_011.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 163-164

Create a tapered cylinder by using the ``rx`` and ``ry`` parameters.

.. GENERATED FROM PYTHON SOURCE LINES 164-169

.. code-block:: Python

    mapdl.vdele("all")
    mapdl.vext(a0, dz=4, rx=0.3, ry=0.3, rz=1)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_012.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_012.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_013.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_013.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 170-176

APDL Command: VROTAT
~~~~~~~~~~~~~~~~~~~~
Generate cylindrical volumes by rotating an area pattern about an
axis.

Rotate a circle about the Z axis to create a hoop

.. GENERATED FROM PYTHON SOURCE LINES 176-197

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # first, create an area from a circle
    hoop_radius = 10
    hoop_thickness = 0.5
    k0 = mapdl.k("", hoop_radius, 0, 0)
    k1 = mapdl.k("", hoop_radius, 1, 0)
    k2 = mapdl.k("", hoop_radius, 0, hoop_thickness)
    carc0 = mapdl.circle(k0, 1, k1)
    a0 = mapdl.al(*carc0)

    # define a Z-axis
    k_axis0 = mapdl.k("", 0, 0, 0)
    k_axis1 = mapdl.k("", 0, 0, 1)

    # Rotate about the Z-axis.  By default it will rotate all 360 degrees
    mapdl.vrotat(a0, pax1=k_axis0, pax2=k_axis1)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_014.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_014.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_015.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_015.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_016.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_016.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_017.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_017.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_018.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_018.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 198-204

APDL Command: VSYMM
~~~~~~~~~~~~~~~~~~~~
Generate volumes from a volume pattern by symmetry reflection.

Create four blocks by reflecting a single block across the YZ and
then XZ planes.

.. GENERATED FROM PYTHON SOURCE LINES 204-214

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    vnum = mapdl.blc4(1, 1, 1, 1, depth=1)
    mapdl.vsymm("X", vnum)
    mapdl.vsymm("Y", "ALL")

    mapdl.vplot(show_lines=True, show_bounds=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_019.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_019.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_020.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_020.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_021.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_021.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_022.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_022.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_023.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_023.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 215-218

Volume IDs
~~~~~~~~~~
Return an array of the volume numbers.

.. GENERATED FROM PYTHON SOURCE LINES 218-222

.. code-block:: Python

    vnum = mapdl.geometry.vnum
    vnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    array([1, 2, 3, 4], dtype=int32)



.. GENERATED FROM PYTHON SOURCE LINES 223-226

Volume Geometry
~~~~~~~~~~~~~~~
Volume geometry can be accessed from the ``geometry.volumes`` method.

.. GENERATED FROM PYTHON SOURCE LINES 226-230

.. code-block:: Python

    volume_mesh = mapdl.geometry.volumes
    volume_mesh







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table style='width: 100%;'><tr><th>Information</th><th>Blocks</th></tr><tr><td>
    <table>
    <tr><th>Multiblock</th><th>Values</th></tr>
    <tr><td>N Blocks</td><td>4</td></tr>
    <tr><td>X Bounds</td><td>-2.000, 2.000</td></tr>
    <tr><td>Y Bounds</td><td>-2.000, 2.000</td></tr>
    <tr><td>Z Bounds</td><td>0.000, 1.000</td></tr>
    </table>

    </td><td>
    <table>
    <tr><th>Index</th><th>Name</th><th>Type</th></tr>
    <tr><th>0</th><th>volume 1</th><th>UnstructuredGrid</th></tr>
    <tr><th>1</th><th>volume 2</th><th>UnstructuredGrid</th></tr>
    <tr><th>2</th><th>volume 3</th><th>UnstructuredGrid</th></tr>
    <tr><th>3</th><th>volume 4</th><th>UnstructuredGrid</th></tr>
    </table>

    </td></tr> </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 231-239

Volume Selection
~~~~~~~~~~~~~~~~
There are two approaches for selecting volumes, the old "legacy"
style and the new style.  The old style is valuable for those who
are comfortable with the existing MAPDL commands, and new style is
useful for selecting volumes in a pythonic manner.

This example generates a series of random volumes and selects them

.. GENERATED FROM PYTHON SOURCE LINES 239-256

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()


    def generate_random_volume():
        start_x, start_y, height, width, depth = np.random.random(5)
        mapdl.blc4(start_x * 10, start_y * 10, height, width, depth)


    # create 20 random volumes
    for _ in range(20):
        generate_random_volume()

    # Print the volume numbers
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 257-258

Select every other volume with the old style command.

.. GENERATED FROM PYTHON SOURCE LINES 258-262

.. code-block:: Python

    mapdl.vsel("S", "VOLU", "", 1, 20, 2)
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 263-267

Select every other volume with the new style command.

Note that the item IDs are 1 based in MAPDL, while Python ranges are
0 based.

.. GENERATED FROM PYTHON SOURCE LINES 267-271

.. code-block:: Python

    mapdl.geometry.volume_select(range(1, 21, 2))
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 272-279

Select volumes from a list

Note that you can ``return_selected`` if you want to see what you
have selected.  This is helpful when reselecting from existing
areas.

Note that you could use a numpy array here as well.

.. GENERATED FROM PYTHON SOURCE LINES 279-283

.. code-block:: Python

    items = mapdl.geometry.volume_select([1, 5, 10, 20], return_selected=True)
    print(items)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  5 10 20]




.. GENERATED FROM PYTHON SOURCE LINES 284-290

APDL Command: VPLOT
~~~~~~~~~~~~~~~~~~~
Plot colored volumes while displaying the keypoint numbers.

There are a variety of plotting options available for all the common
plotting methods.

.. GENERATED FROM PYTHON SOURCE LINES 290-302

.. code-block:: Python


    mapdl.clear()
    mapdl.prep7()

    # Create basic demo geometry
    mapdl.cyl4(xcenter=0, ycenter=0, rad1=1, theta1=0, rad2=2, depth=1)
    mapdl.vsymm("Y", "ALL")

    # Plot while showing bounds and disabling extra line plotting.
    mapdl.vplot(show_bounds=True, show_lines=False, quality=1)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_024.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_024.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_025.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_025.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_026.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_026.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 303-306

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 306-307

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 27.995 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-geometry_03-volumes.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03-volumes.ipynb <03-volumes.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03-volumes.py <03-volumes.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03-volumes.zip <03-volumes.zip>`
