version/0.73/_sources/examples/gallery_examples/01-geometry/03-volumes.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-geometry/03-volumes.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-geometry_03-volumes.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-geometry_03-volumes.py:


.. _ref_basic-geometry-volumes:

Volumes
-------

This example shows how to create basic geometry
using volume commands.

.. GENERATED FROM PYTHON SOURCE LINES 33-45

.. code-block:: Python


    import numpy as np

    from ansys.mapdl.core import launch_mapdl

    # start MAPDL and enter the pre-processing routine
    mapdl = launch_mapdl()
    mapdl.clear()
    mapdl.prep7()
    print(mapdl)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Mapdl
    -----
    PyMAPDL Version:     0.73.2
    Interface:           grpc
    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       25.2
    Running on:          localhost
                         (127.0.0.1)




.. GENERATED FROM PYTHON SOURCE LINES 46-49

APDL Command: V
~~~~~~~~~~~~~~~
Define a volume through keypoints.

.. GENERATED FROM PYTHON SOURCE LINES 49-64

.. code-block:: Python


    # Create a simple cube volume.

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    k4 = mapdl.k("", 0, 0, 1)
    k5 = mapdl.k("", 1, 0, 1)
    k6 = mapdl.k("", 1, 1, 1)
    k7 = mapdl.k("", 0, 1, 1)
    v0 = mapdl.v(k0, k1, k2, k3, k4, k5, k6, k7)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_001.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_002.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_002.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 65-66

Create a triangular prism

.. GENERATED FROM PYTHON SOURCE LINES 66-81

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 1, 0)
    k4 = mapdl.k("", 0, 0, 1)
    k5 = mapdl.k("", 1, 0, 1)
    k6 = mapdl.k("", 1, 1, 1)
    k7 = mapdl.k("", 0, 1, 1)
    v1 = mapdl.v(k0, k1, k2, k2, k4, k5, k6, k6)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_003.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_003.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_004.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_004.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 82-83

Create a triangular prism

.. GENERATED FROM PYTHON SOURCE LINES 83-94

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 0, 0, 1)
    v0 = mapdl.v(k0, k1, k2, k2, k3, k3, k3, k3)
    mapdl.vplot(show_lines=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_005.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_005.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_006.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_006.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 95-100

APDL Command: VA
~~~~~~~~~~~~~~~~
Generate a volume bounded by existing areas.

Create a simple tetrahedral bounded by 4 areas

.. GENERATED FROM PYTHON SOURCE LINES 100-119

.. code-block:: Python


    mapdl.clear()
    mapdl.prep7()
    k0 = mapdl.k("", -1, 0, 0)
    k1 = mapdl.k("", 1, 0, 0)
    k2 = mapdl.k("", 1, 1, 0)
    k3 = mapdl.k("", 1, 0.5, 1)

    # create faces
    a0 = mapdl.a(k0, k1, k2)
    a1 = mapdl.a(k0, k1, k3)
    a2 = mapdl.a(k1, k2, k3)
    a3 = mapdl.a(k0, k2, k3)

    # generate and plot the volume
    vnum = mapdl.va(a0, a1, a2, a3)
    mapdl.aplot(show_lines=True, show_bounds=True)





.. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_007.png
   :alt: 03 volumes
   :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 120-125

APDL Command: VDRAG
~~~~~~~~~~~~~~~~~~~
Generate volumes by dragging an area pattern along a path.

Create a square with a hole in it and drag it along an arc.

.. GENERATED FROM PYTHON SOURCE LINES 125-141

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # create a square with a hole in it.
    anum0 = mapdl.blc4(0, 0, 1, 1)
    anum1 = mapdl.blc4(0.25, 0.25, 0.5, 0.5)
    aout = mapdl.asba(anum0, anum1)

    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 1, 0, 1)
    k2 = mapdl.k("", 1, 0, 0)
    l0 = mapdl.larc(k0, k1, k2, 2)
    mapdl.vdrag(aout, nlp1=l0)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_008.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_008.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_009.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_009.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 142-147

APDL Command: VEXT
~~~~~~~~~~~~~~~~~~
Generate additional volumes by extruding areas.

Create a basic cylinder by extruding a circle.

.. GENERATED FROM PYTHON SOURCE LINES 147-162

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # first, create an area from a circle
    k0 = mapdl.k("", 0, 0, 0)
    k1 = mapdl.k("", 0, 0, 1)
    k2 = mapdl.k("", 0, 0, 0.5)
    carc0 = mapdl.circle(k0, 1, k1)
    a0 = mapdl.al(*carc0)

    # next, extrude it and plot it
    mapdl.vext(a0, dz=4)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_010.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_010.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_011.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_011.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 163-164

Create a tapered cylinder by using the ``rx`` and ``ry`` parameters.

.. GENERATED FROM PYTHON SOURCE LINES 164-169

.. code-block:: Python

    mapdl.vdele("all")
    mapdl.vext(a0, dz=4, rx=0.3, ry=0.3, rz=1)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_012.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_012.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_013.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_013.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 170-176

APDL Command: VROTAT
~~~~~~~~~~~~~~~~~~~~
Generate cylindrical volumes by rotating an area pattern about an
axis.

Rotate a circle about the Z axis to create a hoop

.. GENERATED FROM PYTHON SOURCE LINES 176-197

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    # first, create an area from a circle
    hoop_radius = 10
    hoop_thickness = 0.5
    k0 = mapdl.k("", hoop_radius, 0, 0)
    k1 = mapdl.k("", hoop_radius, 1, 0)
    k2 = mapdl.k("", hoop_radius, 0, hoop_thickness)
    carc0 = mapdl.circle(k0, 1, k1)
    a0 = mapdl.al(*carc0)

    # define a Z-axis
    k_axis0 = mapdl.k("", 0, 0, 0)
    k_axis1 = mapdl.k("", 0, 0, 1)

    # Rotate about the Z-axis.  By default it will rotate all 360 degrees
    mapdl.vrotat(a0, pax1=k_axis0, pax2=k_axis1)
    mapdl.vplot(show_lines=True, quality=5)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_014.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_014.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_015.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_015.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_016.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_016.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_017.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_017.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_018.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_018.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 198-204

APDL Command: VSYMM
~~~~~~~~~~~~~~~~~~~~
Generate volumes from a volume pattern by symmetry reflection.

Create four blocks by reflecting a single block across the YZ and
then XZ planes.

.. GENERATED FROM PYTHON SOURCE LINES 204-214

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()

    vnum = mapdl.blc4(1, 1, 1, 1, depth=1)
    mapdl.vsymm("X", vnum)
    mapdl.vsymm("Y", "ALL")

    mapdl.vplot(show_lines=True, show_bounds=True)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_019.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_019.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_020.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_020.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_021.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_021.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_022.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_022.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_023.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_023.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 215-218

Volume IDs
~~~~~~~~~~
Return an array of the volume numbers.

.. GENERATED FROM PYTHON SOURCE LINES 218-222

.. code-block:: Python

    vnum = mapdl.geometry.vnum
    vnum






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    array([1, 2, 3, 4], dtype=int32)



.. GENERATED FROM PYTHON SOURCE LINES 223-226

Volume Geometry
~~~~~~~~~~~~~~~
Volume geometry can be accessed from the ``geometry.volumes`` method.

.. GENERATED FROM PYTHON SOURCE LINES 226-230

.. code-block:: Python

    volume_mesh = mapdl.geometry.volumes
    volume_mesh







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><style>/* PyVista HTML repr stylesheet.
     * Uses pv- prefix to avoid conflicts with other libraries.
     */

    :root {
      --pv-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --pv-border-color: var(--jp-border-color2, #e0e0e0);
      --pv-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --pv-background-color-row-even: var(--jp-layout-color1, #f5f5f5);
      --pv-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
      --pv-badge-active: #1b5e20;
      --pv-badge-normals: #0d47a1;
      --pv-badge-vectors: #00695c;
      --pv-badge-tcoords: #4527a0;
    }

    body[data-jp-theme-light="false"] {
      --pv-font-color0: var(--jp-content-font-color0, rgba(255, 255, 255, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(255, 255, 255, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(255, 255, 255, 0.38));
      --pv-border-color: var(--jp-border-color2, #424242);
      --pv-disabled-color: var(--jp-layout-color3, #616161);
      --pv-background-color-row-even: var(--jp-layout-color1, #1a1a1a);
      --pv-background-color-row-odd: var(--jp-layout-color2, #252525);
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    html[theme="dark"],
    html[data-theme="dark"],
    body[data-theme="dark"],
    body.vscode-dark {
      --pv-font-color0: rgba(255, 255, 255, 1);
      --pv-font-color2: rgba(255, 255, 255, 0.54);
      --pv-font-color3: rgba(255, 255, 255, 0.38);
      --pv-border-color: #424242;
      --pv-disabled-color: #616161;
      --pv-background-color-row-even: #1a1a1a;
      --pv-background-color-row-odd: #252525;
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    /* OS-level dark mode fallback: applies when no explicit data-theme is set */
    @media (prefers-color-scheme: dark) {
      html:not([data-theme="light"]) {
        --pv-font-color0: rgba(255, 255, 255, 1);
        --pv-font-color2: rgba(255, 255, 255, 0.54);
        --pv-font-color3: rgba(255, 255, 255, 0.38);
        --pv-border-color: #424242;
        --pv-disabled-color: #616161;
        --pv-background-color-row-even: #1a1a1a;
        --pv-background-color-row-odd: #252525;
        --pv-badge-active: #66bb6a;
        --pv-badge-normals: #64b5f6;
        --pv-badge-vectors: #4db6ac;
        --pv-badge-tcoords: #b39ddb;
      }
    }

    .pv-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
      line-height: 1.6;
      padding-bottom: 4px;
      font-family: var(--jp-ui-font-family, sans-serif);
      font-size: var(--jp-ui-font-size1, 13px);
      color: var(--pv-font-color0);
    }

    .pv-text-repr-fallback {
      display: none;
    }

    /* Header */
    .pv-header {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 6px;
      padding-bottom: 6px;
      border-bottom: solid 1px var(--pv-border-color);
      margin-bottom: 4px;
    }

    .pv-header-text {
      display: flex;
      flex-direction: column;
      gap: 1px;
      min-width: 0;
      flex: 1;
    }

    .pv-obj-type {
      font-weight: 600;
      color: var(--pv-font-color0);
    }

    .pv-header-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 2px 7px;
      border-radius: 3px;
      color: var(--pv-font-color2);
      border: 1px solid var(--pv-border-color);
      white-space: nowrap;
    }

    /* Metadata (always-visible key-value rows) */
    .pv-metadata {
      margin: 4px 0 6px 0;
      font-size: 0.92em;
      line-height: 1.5;
    }

    .pv-meta-row {
      display: flex;
      flex-wrap: wrap;
      gap: 1px 14px;
      padding: 1px 0;
    }

    .pv-meta-row-label {
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
      min-width: 60px;
    }

    .pv-meta-entry {
      white-space: nowrap;
    }

    /* Copy-to-clipboard button */
    .pv-copy-btn {
      display: inline-block;
      cursor: pointer;
      opacity: 0.5;
      font-size: 0.85em;
      padding: 0 3px;
      vertical-align: middle;
      transition: opacity 0.15s;
      user-select: none;
      border: none;
      background: none;
      color: var(--pv-font-color3);
    }

    .pv-copy-btn:hover {
      opacity: 1;
      color: var(--pv-font-color0);
    }

    .pv-meta-label {
      color: var(--pv-font-color3);
      font-weight: 400;
      padding-right: 2px;
    }

    /* Sections grid */
    .pv-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto auto 1fr 20px 20px;
      margin-block-start: 0;
      margin-block-end: 0;
      list-style: none;
    }

    .pv-section-item {
      display: contents;
    }

    /* Hidden checkbox for expand/collapse */
    .pv-section-item > input {
      display: block;
      opacity: 0;
      height: 0;
      margin: 0;
    }

    .pv-section-item > input + label {
      color: var(--pv-disabled-color);
    }

    .pv-section-item > input:enabled + label {
      cursor: pointer;
      color: var(--pv-font-color2);
    }

    .pv-section-item > input:enabled + label:hover {
      color: var(--pv-font-color0);
    }

    /* Section summary (left column label) */
    .pv-section-summary {
      grid-column: 1;
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
    }

    .pv-section-summary > span {
      display: inline-block;
      padding-left: 0.3em;
    }

    .pv-section-summary-in:disabled + label {
      color: var(--pv-font-color2);
    }

    /* Expand/collapse arrows */
    .pv-section-summary-in + label:before {
      display: inline-block;
      content: "\25b6";
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .pv-section-summary-in:disabled + label:before {
      color: var(--pv-disabled-color);
    }

    .pv-section-summary-in:checked + label:before {
      content: "\25bc";
    }

    .pv-section-summary-in:checked + label > span {
      display: none;
    }

    .pv-section-summary,
    .pv-section-inline-details {
      padding-top: 4px;
    }

    .pv-section-inline-details {
      grid-column: 2 / -1;
    }

    .pv-section-details {
      grid-column: 1 / -1;
      margin-top: 4px;
      margin-bottom: 5px;
    }

    .pv-section-summary-in ~ .pv-section-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-inline-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-details {
      display: block;
    }

    .pv-section-summary-in:checked ~ .pv-section-details:has(.pv-var-list) {
      display: contents;
    }

    /* Variable (array) list */
    .pv-var-list,
    .pv-var-item {
      display: contents;
    }

    .pv-var-item > div,
    .pv-var-item label,
    .pv-var-item > .pv-var-name span {
      background-color: var(--pv-background-color-row-even);
      border-color: var(--pv-background-color-row-odd);
      margin-bottom: 0;
      padding-top: 2px;
    }

    .pv-var-list > li:nth-child(odd) > div,
    .pv-var-list > li:nth-child(odd) > label,
    .pv-var-list > li:nth-child(odd) > .pv-var-name span {
      background-color: var(--pv-background-color-row-odd);
      border-color: var(--pv-background-color-row-even);
    }

    .pv-var-name {
      grid-column: 1;
    }

    .pv-var-dims {
      grid-column: 2;
    }

    .pv-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--pv-font-color2);
    }

    .pv-var-range {
      grid-column: 4;
      color: var(--pv-font-color3);
      font-size: 0.92em;
    }

    .pv-var-badges {
      grid-column: 5;
      padding-left: 8px;
    }

    .pv-var-name,
    .pv-var-dims,
    .pv-var-dtype,
    .pv-var-range {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .pv-var-name:hover,
    .pv-var-dims:hover,
    .pv-var-dtype:hover,
    .pv-var-range:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .pv-var-name span {
      padding-left: 25px !important;
    }

    .pv-var-name-active span {
      font-weight: 600;
    }

    /* Badges */
    .pv-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 1px 5px;
      border-radius: 3px;
      vertical-align: middle;
      line-height: 1.4;
    }

    .pv-badge-active {
      color: var(--pv-badge-active);
      border: 1px solid var(--pv-badge-active);
    }

    .pv-badge-normals {
      color: var(--pv-badge-normals);
      border: 1px solid var(--pv-badge-normals);
    }

    .pv-badge-vectors {
      color: var(--pv-badge-vectors);
      border: 1px solid var(--pv-badge-vectors);
    }

    .pv-badge-tcoords {
      color: var(--pv-badge-tcoords);
      border: 1px solid var(--pv-badge-tcoords);
    }

    /* Logo and Icons */
    .pv-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-logo svg {
      width: 28px;
      height: 28px;
    }

    .pv-brand-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-brand-logo svg {
      height: 20px;
      width: auto;
    }

    /* Children list (MultiBlock / PartitionedDataSet) */
    .pv-children-list {
      padding-left: 25px !important;
      list-style: none;
    }

    .pv-children-list li {
      padding: 1px 0;
    }

    .pv-child-name {
      font-weight: 500;
    }

    .pv-child-type {
      color: var(--pv-font-color2);
      font-style: italic;
    }

    .pv-child-type:before {
      content: "\00b7";
      padding: 0 6px;
      font-style: normal;
    }

    .pv-child-detail {
      color: var(--pv-font-color3);
      font-size: 0.9em;
    }

    .pv-child-detail:not(:empty):before {
      content: "\00b7";
      padding: 0 6px;
    }
    </style><pre class='pv-text-repr-fallback'>Multiblock (0x7fa1a0156320)
      N Blocks:   4
      X Bounds:   -2.000e+00, 2.000e+00
      Y Bounds:   -2.000e+00, 2.000e+00
      Z Bounds:   0.000e+00, 1.000e+00</pre><div class='pv-wrap' style='display:none'><div class='pv-header'><span class='pv-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
      <defs>
        <linearGradient id="pv-mb-top1" x1="0" y1="0" x2="1" y2="1">
          <stop offset="0%" stop-color="#ffd040"/>
          <stop offset="100%" stop-color="#376fa0"/>
        </linearGradient>
        <linearGradient id="pv-mb-top2" x1="0" y1="0" x2="1" y2="1">
          <stop offset="0%" stop-color="#376fa0"/>
          <stop offset="100%" stop-color="#ffd040"/>
        </linearGradient>
      </defs>
      <polygon points="13,2 22,6 13,10 4,6" fill="url(#pv-mb-top1)" opacity="0.9"/>
      <polygon points="4,6 13,10 13,17 4,13" fill="#1a4a70" opacity="0.9"/>
      <polygon points="22,6 13,10 13,17 22,13" fill="#376fa0" opacity="0.85"/>
      <g stroke="rgba(255,255,255,0.4)" stroke-width="0.35" fill="none">
        <polygon points="13,2 22,6 13,10 4,6"/>
        <line x1="13" y1="10" x2="13" y2="17"/>
        <line x1="4" y1="6" x2="4" y2="13"/>
        <line x1="22" y1="6" x2="22" y2="13"/>
        <line x1="4" y1="13" x2="13" y2="17"/>
        <line x1="22" y1="13" x2="13" y2="17"/>
      </g>
      <polygon points="17,7 26,11 17,15 8,11" fill="url(#pv-mb-top2)" opacity="0.9"/>
      <polygon points="8,11 17,15 17,22 8,18" fill="#1a4a70" opacity="0.85"/>
      <polygon points="26,11 17,15 17,22 26,18" fill="#376fa0" opacity="0.85"/>
      <g stroke="rgba(255,255,255,0.4)" stroke-width="0.35" fill="none">
        <polygon points="17,7 26,11 17,15 8,11"/>
        <line x1="17" y1="15" x2="17" y2="22"/>
        <line x1="8" y1="11" x2="8" y2="18"/>
        <line x1="26" y1="11" x2="26" y2="18"/>
        <line x1="8" y1="18" x2="17" y2="22"/>
        <line x1="26" y1="18" x2="17" y2="22"/>
      </g>
      <polygon points="19,13 28,17 19,21 10,17" fill="url(#pv-mb-top1)" opacity="0.95"/>
      <polygon points="10,17 19,21 19,28 10,24" fill="#1a4a70" opacity="0.9"/>
      <polygon points="28,17 19,21 19,28 28,24" fill="#376fa0" opacity="0.9"/>
      <g stroke="rgba(255,255,255,0.45)" stroke-width="0.35" fill="none">
        <polygon points="19,13 28,17 19,21 10,17"/>
        <line x1="19" y1="21" x2="19" y2="28"/>
        <line x1="10" y1="17" x2="10" y2="24"/>
        <line x1="28" y1="17" x2="28" y2="24"/>
        <line x1="10" y1="24" x2="19" y2="28"/>
        <line x1="28" y1="24" x2="19" y2="28"/>
      </g>
    </svg>
    </span><div class='pv-header-text'><div class='pv-obj-type'>Multiblock <span class='pv-header-badge'>4 blocks</span> <span class='pv-header-badge'>44 KiB</span></div></div><span class='pv-brand-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 24">
      <text x="0" y="18" font-family="system-ui,-apple-system,sans-serif" font-size="18" font-weight="700" font-style="italic" letter-spacing="-0.5">
        <tspan fill="#3776AB" opacity="0.7">P</tspan><tspan fill="#FFD43B" opacity="0.7">y</tspan><tspan fill="#008c9e">Vista</tspan>
      </text>
    </svg>
    </span></div><div class='pv-metadata'><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>Bounds</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(-2.0, 2.0, -2.0, 2.0, 0.0, 1.0)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'>X</span> [-2.000e+00, 2.000e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Y</span> [-2.000e+00, 2.000e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Z</span> [0.000e+00, 1.000e+00]</span></div></div><ul class='pv-sections'><li class='pv-section-item'><input id='section-12cfb99c-5e73-42a6-92e3-27f43a5c8676' class='pv-section-summary-in' type='checkbox' checked /><label for='section-12cfb99c-5e73-42a6-92e3-27f43a5c8676' class='pv-section-summary' title='Expand/collapse section'>Blocks: <span>(4)</span></label><div class='pv-section-inline-details'></div><div class='pv-section-details'><ul class='pv-children-list'><li><span class='pv-child-name'>volume 1</span><span class='pv-child-type'>UnstructuredGrid</span><span class='pv-child-detail'>98 pts · 96 cells · 11 KiB</span></li><li><span class='pv-child-name'>volume 2</span><span class='pv-child-type'>UnstructuredGrid</span><span class='pv-child-detail'>98 pts · 96 cells · 11 KiB</span></li><li><span class='pv-child-name'>volume 3</span><span class='pv-child-type'>UnstructuredGrid</span><span class='pv-child-detail'>98 pts · 96 cells · 11 KiB</span></li><li><span class='pv-child-name'>volume 4</span><span class='pv-child-type'>UnstructuredGrid</span><span class='pv-child-detail'>98 pts · 96 cells · 11 KiB</span></li></ul></div></li></ul></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 231-239

Volume Selection
~~~~~~~~~~~~~~~~
There are two approaches for selecting volumes, the old "legacy"
style and the new style.  The old style is valuable for those who
are comfortable with the existing MAPDL commands, and new style is
useful for selecting volumes in a pythonic manner.

This example generates a series of random volumes and selects them

.. GENERATED FROM PYTHON SOURCE LINES 239-256

.. code-block:: Python

    mapdl.clear()
    mapdl.prep7()


    def generate_random_volume():
        start_x, start_y, height, width, depth = np.random.random(5)
        mapdl.blc4(start_x * 10, start_y * 10, height, width, depth)


    # create 20 random volumes
    for _ in range(20):
        generate_random_volume()

    # Print the volume numbers
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]




.. GENERATED FROM PYTHON SOURCE LINES 257-258

Select every other volume with the old style command.

.. GENERATED FROM PYTHON SOURCE LINES 258-262

.. code-block:: Python

    mapdl.vsel("S", "VOLU", "", 1, 20, 2)
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 263-267

Select every other volume with the new style command.

Note that the item IDs are 1 based in MAPDL, while Python ranges are
0 based.

.. GENERATED FROM PYTHON SOURCE LINES 267-271

.. code-block:: Python

    mapdl.geometry.volume_select(range(1, 21, 2))
    print(mapdl.geometry.vnum)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  3  5  7  9 11 13 15 17 19]




.. GENERATED FROM PYTHON SOURCE LINES 272-279

Select volumes from a list

Note that you can ``return_selected`` if you want to see what you
have selected.  This is helpful when reselecting from existing
areas.

Note that you could use a numpy array here as well.

.. GENERATED FROM PYTHON SOURCE LINES 279-283

.. code-block:: Python

    items = mapdl.geometry.volume_select([1, 5, 10, 20], return_selected=True)
    print(items)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [ 1  5 10 20]




.. GENERATED FROM PYTHON SOURCE LINES 284-290

APDL Command: VPLOT
~~~~~~~~~~~~~~~~~~~
Plot colored volumes while displaying the keypoint numbers.

There are a variety of plotting options available for all the common
plotting methods.

.. GENERATED FROM PYTHON SOURCE LINES 290-302

.. code-block:: Python


    mapdl.clear()
    mapdl.prep7()

    # Create basic demo geometry
    mapdl.cyl4(xcenter=0, ycenter=0, rad1=1, theta1=0, rad2=2, depth=1)
    mapdl.vsymm("Y", "ALL")

    # Plot while showing bounds and disabling extra line plotting.
    mapdl.vplot(show_bounds=True, show_lines=False, quality=1)





.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_024.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_024.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_025.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_025.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_026.png
          :alt: 03 volumes
          :srcset: /examples/gallery_examples/01-geometry/images/sphx_glr_03-volumes_026.png
          :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 303-306

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 306-307

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 15.178 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-geometry_03-volumes.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03-volumes.ipynb <03-volumes.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03-volumes.py <03-volumes.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03-volumes.zip <03-volumes.zip>`
